src/styles/Home.scss
// h1 {
//   // color: black;
// }

main {
  display: flex;
  flex-direction: column;
  font-size: 2rem;
  margin-left: 5rem;
  padding: 2rem;

  .greeting {
    display: flex;
    flex-direction: column;
    // padding: 16px;

    // .hello {
    //   color: white;
    // }
  }
  .links {
    height: 5rem;
    display: flex;
    align-items: center;
    gap: 2rem;
    font-size: 4rem;

    a {
      display: flex;
      align-items: center;
      padding: .5rem .75rem;
    }
    .link:hover {
      box-shadow: 0 0 3px 0 rgba(0, 0, 0, .5);
      // transform: scale(1rem, .5rem);
    }
  }
}

